# z11n

./: .gitignore  README.md
ca_maker/: README.md  build-ca.conf  build-ca.sh
client/: Cargo.toml
client/agent_service/: Cargo.toml
client/agent_service/config/: sub-ca.crt
client/agent_service/src/: config.rs  host.rs  lib.rs  main.rs
client/sdk_service/: Cargo.toml
client/z11n_agent/: Cargo.toml  build.rs
client/z11n_agent/config/: agent_service.toml  log4rs.yml  z11n-ca.crt  z11n_agent.toml
client/z11n_agent/src/: config.rs  host.rs  lib.rs  main.rs
client/z11n_sdk/: Cargo.toml
docs/: dev_memo.md  llm_task_broker.md  platform_service.md
script/: make_pkg  service
server/: Cargo.toml
server/client_service/: Cargo.toml  build.rs
server/client_service/config/: client_service.toml
server/client_service/data/: z11n.sqlite
server/client_service/proto/: z11n.proto
server/client_service/src/: agent.rs  config.rs  lib.rs  main.rs  server.rs  uds.rs
server/entity/: Cargo.toml
server/entity/src/: lib.rs  prelude.rs  tbl_agent.rs  tbl_auth_role.rs  tbl_auth_user.rs  tbl_auth_user_role.rs  tbl_host.rs  tbl_llm_task.rs  tbl_system_config.rs
server/migration/: Cargo.toml  README.md
server/migration/src/: lib.rs  m20250722_172354_create_tbl_agent.rs  m20250723_025059_create_tbl_auth_user.rs  m20250723_080947_create_tbl_host.rs  m20250727_145621_create_tbl_llm_task.rs  m20250807_152429_create_tbl_auth_role.rs  m20250807_152654_create_tbl_auth_user_role.rs  m20250815_020235_create_tbl_system_config.rs
server/pub_lib/: Cargo.toml
server/pub_lib/src/: lib.rs
server/script/: make_entity_by_migration
server/ui_service/: Cargo.toml  build.rs
server/ui_service/config/: log4rs.yml
server/ui_service/src/: agent.rs  auth.rs  config.rs  host.rs  lib.rs  llm_task.rs  main.rs  role.rs  server.rs  system.rs  uds.rs  user.rs  z11n.rs
server/ui_web/: index.html  package.json  vite.config.ts
server/ui_web/src/: AgentDetailPage.tsx  AgentQueryPage.tsx  AppLayout.tsx  HostDetailPage.tsx  HostQueryPage.tsx  LlmTaskDetailPage.tsx  LlmTaskQueryPage.tsx  LoginPage.tsx  RoleCreatePage.tsx  RoleDetailPage.tsx  RoleModifyPage.tsx  RoleQueryPage.tsx  SystemPage.tsx  UserCreatePage.tsx  UserDetailPage.tsx  UserModifyPage.tsx  UserQueryPage.tsx  main.tsx
server/ui_web/src/types/: restfulApi.ts
server/ui_web/src/utils/: RequireAuth.tsx  permission.ts  restful_api.ts
server/z11n_server/: Cargo.toml  README.md
server/z11n_server/config/: ui_service.toml  z11n-ca.key
server/z11n_server/src/: main.rs
