[package]
edition = "2024"
name = "z11n_agent"
version = "0.1.0"

[dependencies]
anyhow = "1.0.98"
clap = {version = "4.5.42", features = ["derive"]}
config = "0.15.13"
log = "0.4.27"
log4rs = "1.3.0"
once_cell = "1.21.3"
parking_lot = "0.12.4"
prost = "0.13.5"
reqwest = {version = "0.12.22", default-features = false, features = ["rustls-tls"]}
rustls = {version = "0.23.29", features = ["ring"]}
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.142"
sysinfo = "0.36.1"
tokio = {version = "1.46.1", features = [
  "macros",
  "rt-multi-thread",
  "sync",
  "time",
]}
tokio-stream = "0.1.17"
tonic = {version = "0.13.1", features = ["tls-ring", "gzip"]}
uuid = {version = "1.17.0", features = ["v4"]}

[build-dependencies]
anyhow = "1.0.98"
tonic-build = "0.13.1"

[dev-dependencies]
tracing-subscriber = "0.3"
