[package]
edition = "2024"
name = "client_service"
version = "0.1.0"

[dependencies]
anyhow = "1.0.98"
bincode = "2.0.1"
chrono = "0.4.41"
clap = {version = "4.5.42", features = ["derive"]}
config = "0.15.13"
entity = {path = "../entity"}
futures = "0.3.31"
log = "0.4.27"
log4rs = "1.3.0"
migration = {path = "../migration"}
moka = {version = "0.12.10", features = ["sync"]}
once_cell = "1.21.3"
prost = "0.13.5"
pub_lib = {path = "../pub_lib"}
rustls = {version = "0.23.29", features = ["ring"]}
sea-orm = {version = "1.1.14", features = [
  "sqlx-postgres",
  "sqlx-sqlite",
  "runtime-tokio-rustls",
  "macros",
]}
serde = {version = "1.0.219", features = ["derive"]}
sled = "0.34.7"
tokio = {version = "1.46.1", features = [
  "macros",
  "rt-multi-thread",
  "sync",
  "time",
]}
tokio-stream = "0.1.17"
tokio-util = {version = "0.7.15", features = ["codec"]}
tonic = {version = "0.13.1", features = ["tls-ring", "gzip"]}
uuid = {version = "1.17.0", features = ["v4"]}

[build-dependencies]
anyhow = "1.0.98"
tonic-build = "0.13.1"
