[package]
edition = "2024"
name = "migration"
publish = false
version = "0.1.0"

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = {version = "1.13.1", features = ["attributes", "tokio1"]}

[dependencies.sea-orm-migration]
features = [
  "runtime-tokio-rustls", # `ASYNC_RUNTIME` feature
  "sqlx-postgres", # `DATABASE_DRIVER` feature
  "sqlx-sqlite",
]
version = "1.1.14"
