[package]
edition = "2024"
name = "ui_service"
version = "0.1.0"

[dependencies]
anyhow = "1.0.98"
axum = {version = "0.8.4", features = ["multipart"]}
axum-server = {version = "0.7.2", features = ["tls-rustls"]}
bincode = "2.0.1"
captcha = "1.0.0"
chrono = "0.4.41"
clap = {version = "4.5.42", features = ["derive"]}
config = "0.15.13"
entity = {path = "../entity"}
futures = "0.3.31"
log = "0.4.27"
log4rs = "1.3.0"
migration = {path = "../migration"}
moka = {version = "0.12.10", features = ["sync"]}
once_cell = "1.21.3"
prost = "0.13.5"
pub_lib = {path = "../pub_lib"}
rustls = {version = "0.23.29", features = ["ring"]}
sea-orm = {version = "1.1.14", features = [
  "sqlx-postgres",
  "sqlx-sqlite",
  "runtime-tokio-rustls",
  "macros",
]}
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.141"
sled = "0.34.7"
tokio = {version = "1.46.1", features = ["full"]}
tokio-util = {version = "0.7.15", features = ["codec"]}
tower-http = {version = "0.6.6", features = ["fs"]}
uuid = {version = "1.17.0", features = ["v4"]}
validator = {version = "0.20.0", features = ["derive"]}

[build-dependencies]
anyhow = "1.0"
prost-build = "0.13.5"

[dev-dependencies]
tracing-subscriber = "0.3"
