[package]
edition = "2024"
name = "z11n_server"
version = "0.1.0"

[dependencies]
anyhow = "1.0.98"
bincode = "2.0.1"
clap = {version = "4.5.42", features = ["derive"]}
client_service = {path = "../client_service"}
log = "0.4.27"
log4rs = "1.3.0"
migration = {path = "../migration"}
prost = "0.13.5"
pub_lib = {path = "../pub_lib"}
rustls = {version = "0.23.29", features = ["ring"]}
sea-orm = {version = "1.1.14", features = [
  "sqlx-postgres",
  "sqlx-sqlite",
  "runtime-tokio-rustls",
  "macros",
]}
sled = "0.34.7"
tokio = {version = "1.46.1", features = ["full"]}
ui_service = {path = "../ui_service"}
